# chat-app

./: Cargo.toml
src/client/: main.rs
src/server/: main.rs
